--- a/todolist.html
+++ b/todolist.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
 
     <style>
         .container {
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div id="app" class="container">
-        <h1>Todo List - Getting Started With VueJS and</h1>
+        <h1>Todo List</h1>
 
         <div v-if="!isEditing">
             <input type="text" v-model="todo">
